[gd_scene load_steps=7 format=3 uid="uid://nghha6o4521i"]

[ext_resource type="Script" path="res://Interface/game_ui.gd" id="1_pq8lk"]
[ext_resource type="Texture2D" uid="uid://0okvc21xb5ed" path="res://Pixel Adventure/Menu/Buttons/Settings.png" id="2_l10ma"]
[ext_resource type="Texture2D" uid="uid://bec38n0lpi503" path="res://Pixel Adventure/Menu/Buttons/Restart.png" id="2_rlaa8"]

[sub_resource type="Animation" id="Animation_hk10f"]
resource_name = "Pressed"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.203922, 0.203922, 0.203922, 1)]
}

[sub_resource type="Animation" id="Animation_7dkhd"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_asncg"]
_data = {
"Pressed": SubResource("Animation_hk10f"),
"RESET": SubResource("Animation_7dkhd")
}

[node name="Game UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pq8lk")

[node name="Settings" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_bottom = 60.0
grow_horizontal = 0
pivot_offset = Vector2(20, 20)
texture_normal = ExtResource("2_l10ma")
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Settings"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_asncg")
}

[node name="Settings2" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_right = -60.0
offset_bottom = 60.0
grow_horizontal = 0
pivot_offset = Vector2(20, 20)
texture_normal = ExtResource("2_rlaa8")
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Settings2"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_asncg")
}

[connection signal="button_down" from="Settings" to="." method="_on_settings_button_down"]
[connection signal="button_up" from="Settings" to="." method="_on_settings_button_up"]
[connection signal="button_down" from="Settings2" to="." method="_on_settings_2_button_down"]
[connection signal="button_up" from="Settings2" to="." method="_on_settings_2_button_up"]
